[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/start.gd" type="Script" id=1]
[ext_resource path="res://sprites/Inicio.png" type="Texture" id=2]
[ext_resource path="res://title.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Oleander Cakes.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://credits_text.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=5]

size = 75
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Start" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 580.0

[node name="Menu" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
margin_bottom = 95.0

[node name="Title" parent="Control/Menu" instance=ExtResource( 3 )]

[node name="New" type="Button" parent="Control/Menu"]
editor/display_folded = true
margin_top = 129.0
margin_right = 824.0
margin_bottom = 229.0
rect_min_size = Vector2( 360, 100 )
text = " "
flat = true
align = 2

[node name="Label" type="Label" parent="Control/Menu/New"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "New"
align = 2

[node name="Continue" type="Button" parent="Control/Menu"]
editor/display_folded = true
margin_top = 233.0
margin_right = 824.0
margin_bottom = 333.0
rect_min_size = Vector2( 360, 100 )
disabled = true
text = " "
flat = true
align = 2

[node name="Label" type="Label" parent="Control/Menu/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Continue"
align = 2

[node name="Quit" type="Button" parent="Control/Menu"]
editor/display_folded = true
margin_top = 337.0
margin_right = 824.0
margin_bottom = 457.0
rect_min_size = Vector2( 0, 120 )
flat = true
align = 2

[node name="Label" type="Label" parent="Control/Menu/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Quit"
align = 2

[node name="Credits" parent="Control/Menu" instance=ExtResource( 5 )]

[node name="Tween" type="Tween" parent="."]

[node name="BlackTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Control/Menu/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Control/Menu/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_completed"]
[connection signal="timeout" from="BlackTimer" to="." method="_on_BlackTimer_timeout"]
